// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapSearchResultsItem rendering should render an item 1`] = `
<button
  className="map-search-results__item"
  onClick={[MockFunction]}
>
  <section
    className="map-search-results__item-content"
  >
    <div
      className="map-search-results__item-category"
    >
      Adres
    </div>
    <div
      className="map-search-results__item-name"
    >
      Dam 1
    </div>
  </section>
  <test-file-stub
    className="map-search-results__item-arrow"
  />
</button>
`;

exports[`MapSearchResultsItem rendering should update an item 1`] = `
<button
  className="map-search-results__item"
  onClick={[MockFunction]}
>
  <section
    className="map-search-results__item-content"
  >
    <div
      className="map-search-results__item-category"
    >
      Bouwblok
    </div>
    <div
      className="map-search-results__item-name"
    >
      ABC123
    </div>
  </section>
  <test-file-stub
    className="map-search-results__item-arrow"
  />
</button>
`;
